# study-book

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
src/knowledge_path_demo/: __init__.py  app.py  config.py  domain.py  llm.py  main.py  repository.py
src/knowledge_path_demo/static/: app.js  style.css
src/knowledge_path_demo/templates/: index.html
tests/: test_api.py  test_domain.py  test_llm.py  test_repository.py
